<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recuerda</string>
    <string name="title_recuerdo_detail">Recuerdo Detail</string>
    <string name="title_activity_asistente">Nuevo recuerdo</string>
    <string name="action_siguiente">Siguiente</string>
    <string name="action_hecho">Hecho</string>    
    <string name="action_add">Añadir</string>
    <string name="action_game">Jugar</string>
    <string name="descrip_img_recuerdo">Boton para cargar la imagen del recuerdo</string>
    <string name="txt_cargar_img">Por favor proporcione la imagen para el recuerdo.</string>
    <string name="txt_selec_relacion">Por favor seleccione la relación</string>
    <string name="txt_selec_audio">Grabar audio</string>
    <string name="txt_nom_recuerdo">Nombre</string>
    <string name="txt_nom_relacion">Relacion</string>
    <string name="txt_duracion">00:00</string>
    <string name="lbl_nueva_relacion_nombre">Nombre</string>
    <string name="descrip_img_recuerdo">Imagen del recuerdo</string>
    <string name="descrip_img_play">Reproducir audio</string>
    <string name="descrip_img_del">Borrar audio</string>
    <string name="descrip_add_relacion">Añadir nueva relación</string>
    <string name="descrip_img_juego">Opcion de respuesta</string>
    <!-- <string name="descrip_btn_stop">Parar la grabación</string> -->
    <string name="hint_nombre_recuerdo">Escribe el nombre...</string>
    <string name="lbl_btnGuardar">Guardar</string>
    <string name="lbl_btnCancelar">Cancelar</string>
    <string name="lbl_btnAceptar">Aceptar</string>
    <string name="tit_dialogError">Error</string>
    <string name="tit_dialogInfo">Información</string>
    <string name="tit_dialogCorrecto">Correcto</string>
    <string name="tit_dialogIncorrecto">Incorrecto</string>
    <string name="lbl_btnSi">Si</string>
    <string name="lbl_btnNo">No</string>
    <string name="txt_nueva">Nueva</string>
    <string name="txt_relacion">Relacion</string>
    
    <string name="msg_img_obligatorio">Debe seleccionar una imagen</string>
    <string name="msg_nombre_obligatorio">Debe escribir un nombre</string>
    <string name="msg_recuerdo_guardado">Recuerdo guardado correctamente</string>
    <string name="msg_dialog_borrar_recuerdo">¿Está seguro de borrar este recuerdo?</string>
    <string name="msg_dialgo_guardar">Guardando...</string>
    <string name="msg_dialog_error">Ocurrio un error</string>
    <string name="msg_dialog_borrar_audio">¿Desea borrar el audio?</string>    
    <string name="msg_dialog_nojuego">Debe tener, al menos, 4 recuerdos para poder jugar.</string>
    <string name="msg_grabar_audio">Hable ahora ...</string>
    <string name="msg_cargando_juego">Cargando siguiente partida ...</string>
    <string name="msg_dialog_grabando">Grabando ...</string>
    <string name="msg_dialog_reproduciendo">Reproduciendo...</string>
        
    
    <string name="frase1_error">\"El mayor error que una persona puede cometer es tener miedo de cometer un error.\"</string>
    <string name="autor_frase1_error">Elbert Hubbard</string>
     
    
    <string name="frase1">\"El verdadero viaje se hace en la memoria.\"</string>
    <string name="autor_frase1">Proust, Marcel</string>
    <string name="frase2">\"Nada graba tan fijamente en nuestra memoria alguna cosa como el deseo de olvidarla.\"</string>
    <string name="autor_frase2">Montaigne, Michel de</string>
    <string name="frase3">\"Gracias a la memoria se da en los hombres lo que se llama experiencia.\"</string>
    <string name="autor_frase3">Aristóteles</string>
    <string name="frase4">\"La imaginación no es más que el aprovechamiento de lo que se tiene en la memoria.\"</string>
    <string name="autor_frase4">Bonnard, Pierre</string>
    <string name="frase5">\"La memoria es el centinela del cerebro.\"</string>
    <string name="autor_frase5">Shakespeare, William</string>
    <string name="frase6">\"No hay melancolía sin memoria ni memoria sin melancolía.\"</string>
    <string name="autor_frase6">Proust, Marcel</string>
    <string name="frase7">\"El que no tiene memoria se hace una de papel.\"</string>
    <string name="autor_frase7">García Márquez, Gabriel</string>
    <string name="frase8">\"El instinto no es otra cosa que la memoria de la especie humana heredada de generación en generación.\"</string>
    <string name="autor_frase8">Forel, François Alphonse</string>
    <string name="frase9">\"Se llama memoria a la facultad de acordarse de aquello que quisiéramos olvidar.\"</string>
    <string name="autor_frase9">Gelin, Daniel</string>
    <string name="frase10">\"El lenguaje literario es un lenguaje que ha perdido la memoria colectiva.\"</string>
    <string name="autor_frase10">Umbral, Francisco</string>
    <string name="frase11">\"Cada uno tiene el máximo de memoria para lo que le interesa y el mínimo para lo que no le interesa.\"</string>
    <string name="autor_frase11">Schopenhauer, Arthur</string>
    <string name="frase12">\"La lucha del hombre contra el poder es la lucha de la memoria contra el olvido.\"</string>
    <string name="autor_frase12">Kundera, Milan</string>
    <string name="frase13">\"Nuestra memoria no es más que una imagen de la realidad, por lo que nuestra realidad es sólo nuestra imaginación.\"</string>
    <string name="autor_frase13">Ende, Michael</string>
    <string name="frase14">\"La imaginación está hecha de convenciones de la memoria. Si yo no tuviera memoria no podría imaginar.\"</string>
    <string name="autor_frase14">Borges, Jorge Luis</string>
    <string name="frase15">\"Tenía tan mala memoria que se olvidó de que tenía mala memoria y se acordó de todo.\"</string>
    <string name="autor_frase15">Gómez de la Serna, Ramón</string>
    <string name="frase16">\"El que no esté seguro de su memoria debe abstenerse de mentir.\"</string>
    <string name="autor_frase16">Montaigne, Michel de</string>
    <string name="frase17">\"El que tiene mala memoria se ahorra muchos remordimientos.\"</string>
    <string name="autor_frase17">Osborne, John</string>
    <string name="frase18">\"La memoria es como el mal amigo; cuando más falta te hace, te falla.\"</string>
    <string name="autor_frase18">Refrán</string>
    <string name="frase19">\"La memoria es el único paraíso del que no podemos ser expulsados.\"</string>
    <string name="autor_frase19">Paul, Jean</string>
    <string name="frase20">\"Lo que le concedemos a la memoria quizá se lo quitamos a la especulación.\"</string>
    <string name="autor_frase20">Umbral, Francisco</string>
    <string name="frase21">\"Lo que ocurre en el pasado vuelve a ser vivido en la memoria.\"</string>
    <string name="autor_frase21">Dewey, John</string>
    <string name="frase22">\"Mi memoria es magnífica para olvidar.\"</string>
    <string name="autor_frase22">Stevenson, Robert Louis</string>
    <string name="frase23">\"De toda memoria, sólo vale el don preclaro de evocar los sueños.\"</string>
    <string name="autor_frase23">Machado, Antonio</string>
    <string name="frase24">\"La memoria se vuelve tanto más fiel cuanto más en ella confías.\"</string>
    <string name="autor_frase24">Quincey, Thomas de</string>
    <string name="frase25">\"La vida primaria de la memoria es emotiva más bien que intelectual y práctica.\"</string>
    <string name="autor_frase25">Dewey, John</string>
    <string name="frase26">\"Qué pobre memoria aquella que sólo funciona hacia atrás.\"</string>
    <string name="autor_frase26">Carroll, Lewis</string>
    <string name="frase27">\"Quizá uno comienza a envejecer en el momento en que empieza a dolerle la memoria.\"</string>
    <string name="autor_frase27">Montero, Rosa</string>
    
    
    
    <string-array name="relaciones_array">
        <item>Esposo</item>        
        <item>Esposa</item>
        <item>Hijo</item>
        <item>Hija</item>
        <item>Nieto</item>
        <item>Nieta</item>
    </string-array>

</resources>
