<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
  	android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AsistenteActivity" >

    <LinearLayout
        android:id="@+id/llAsImg"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >
        
        <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:layout_gravity="center"          
        android:text="@string/txt_cargar_img"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/imgAsRecuerdo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/descrip_img_recuerdo"
            android:scaleType="center"
            android:src="@drawable/recuerdo_img" />

        <EditText
            android:id="@+id/etAsNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_nombre_recuerdo"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>

</RelativeLayout>
</ScrollView>